Fix wrong font-size for non-latin Enact-DCO-1.0-Signed-off-by: Jeonghee Ahn <jeonghee27.ahn@lge.com>

--- a/Item/Item.module.less
+++ b/Item/Item.module.less
@@ -10,7 +10,7 @@
 		/* Available for customization */
 	}
 
-	.sand-text-base(@sand-item-font-size);
+	font-size: @sand-item-font-size;
 	.sand-spotlight-padding(@sand-item-vertical-padding);
 
 	font-weight: @sand-item-font-weight;
@@ -92,8 +92,7 @@
 
 	// Text
 	.label {
-		.sand-text-base(@sand-item-label-font-size);
-
+		font-size: @sand-item-label-font-size;
 		font-weight: inherit;
 		.enact-locale-line-height(@sand-item-label-line-height, @sand-tallglyph-item-label-line-height);
 	}
@@ -110,7 +109,7 @@
 	&.large { /* Needed to prevent global class being added in the DOM */ }
 
 	&.small {
-		.sand-text-base(@sand-item-small-font-size);
+		font-size: @sand-item-small-font-size;
 
 		font-weight: @sand-item-small-font-weight;
 		height: @sand-item-small-height;
@@ -121,7 +120,7 @@
 		}
 
 		.label {
-			.sand-text-base(@sand-item-small-label-font-size);
+			font-size: @sand-item-small-label-font-size;
 
 			font-weight: inherit;
 			line-height: @sand-item-small-label-line-height;
